# travel-agent-system

./: .env.example  app.py  pyproject.toml
agents/: critic.py  doer.py  hitl.py  planner.py
data/: trip_data.py
mcp_server/: server.py
schemas/: state.py
utils/: config.py  middleware.py  prompts.py  streaming_utils.py
