[project]
name = "travel-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=3.1.1",
    "langchain>=1.2.13",
    "langchain-core>=1.2.22",
    "langchain-ollama>=1.0.1",
    "pydantic>=2.12.5",
]
